All loads on page load

--- a/reader/index.html
+++ b/reader/index.html
@@ -39,11 +39,10 @@
 	</div>
 </div>
 <div class="container">
-	<div id="selected-subreddit">
-		<h2>Enter a subreddit</h2>
-	</div>
+	<div id="selected-subreddit"></div>
 	<div id="post-container">
-		<!-- <div class="span16 post">
+		<!-- HTML template for reference
+			<div class="span16 post">
 			<div class="row">
 				<div class="span1">
 					<h4 class="score">1234</h4>
