--- a/reader/index.html
+++ b/reader/index.html
@@ -67,6 +67,38 @@
 	</footer>
 	
 </div>
-
 </body>
+<script type="text/x-template" id="linkPostTemplate">
+	<div class="span16 post">
+		<div class="row">
+			<div class="span1">
+				<h4 class="score">{score}</h4>
+			</div>
+			<div class="span14">
+				<h4 class="title"><a href="{url}">{title}</a></h4>
+				<div class="row">
+					<div class="span14 detail">
+					</div>
+				</div>	
+			</div>
+		</div>
+	</div>
+</script>
+<script type="text/x-template" id="selfPostTemplate">
+	<div class="span16 post">
+		<div class="row">
+			<div class="span1">
+				<h4 class="score">{score}</h4>
+			</div>
+			<div class="span14">
+				<h4 class="title"><a href="{url}">{title}</a></h4>
+				<div class="row">
+					<div class="span14 detail">
+						<p>{selftext_html}</p>
+					</div>
+				</div>	
+			</div>
+		</div>
+	</div>
+</script>
 </html>
