--- a/reader/index.html
+++ b/reader/index.html
@@ -41,26 +41,6 @@
 <div class="container">
 	<div id="selected-subreddit"></div>
 	<div id="post-container">
-		<!-- HTML template for reference
-			<div class="span16 post">
-			<div class="row">
-				<div class="span1">
-					<h4 class="score">1234</h4>
-				</div>
-				<div class="span14">
-					<h4 class="title"><a href="#">Title</a></h4>
-					<div class="row">
-						<div class="span14 detail">
-							<p>Selfpost</p>
-						</div>
-					</div>	
-				</div>
-				<div class="span1 vote">
-					<a href="up">Up</a>
-					<a href="up">Down</a>
-				</div>
-			</div>
-		</div> -->
 	</div>
 	<footer>
 	  <p>&copy; Kye Hohenberger 2011</p>
@@ -69,7 +49,7 @@
 </div>
 </body>
 <script type="text/x-template" id="linkPostTemplate">
-	<div class="span16 post">
+	<div class="span16 post" id="{id}">
 		<div class="row">
 			<div class="span1">
 				<h4 class="score">{score}</h4>
@@ -85,7 +65,7 @@
 	</div>
 </script>
 <script type="text/x-template" id="selfPostTemplate">
-	<div class="span16 post">
+	<div class="span16 post" id="{id}">
 		<div class="row">
 			<div class="span1">
 				<h4 class="score">{score}</h4>
@@ -93,8 +73,7 @@
 			<div class="span14">
 				<h4 class="title"><a href="{url}">{title}</a></h4>
 				<div class="row">
-					<div class="span14 detail">
-						<p>{selftext_html}</p>
+					<div class="span14 detail" id="{id}_html">
 					</div>
 				</div>	
 			</div>
